upstream/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upstream
  namespace: tracing-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upstream
  template:
    metadata:
      labels:
        app: upstream
    spec:
      containers:
        - name: upstream
          image: prashanthsriram145/upstream:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: upstream
  namespace: tracing-demo
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: upstream
