upstream/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: upstream-route
  namespace: tracing-demo
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/tracing-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: upstream.tracing-demo.svc.cluster.local
            port:
              number: 80
